# Sk-FFT-Water-simulation

./: Cargo.toml  README.md
src/: camera.rs  complex.rs  consts.rs  demo_state.rs  event.rs  height_field.rs  main.rs  mesh_grid.rs  program.rs  render.rs  shader.rs  wave.rs  window.rs
src/shaders/: base_spectrum.comp  fft.comp  mesh_grid.frag  mesh_grid.vert
